# TCPsocketTest

./: .gitignore  CMakeLists.txt  Config.cpp  Dockerfile  MCprotocolData.cpp  MCprotocolData.hpp  Makefile  PLCConnectionClient.cpp  PLCConnectionClient.hpp  PLCData.cpp  PLCData.hpp  PLCInformation.cpp  PLCInformation.hpp  PLCRequestData.cpp  PLCRequestData.hpp  PLCRequestScheduler.cpp  PLCRequestScheduler.hpp  PLCRequestWorker.cpp  PLCRequestWorker.hpp  PLCResponseData.cpp  a.out  app  build.ninja  globals.cpp  globals.hpp  logger.hpp  main  main.cpp  mainold.cpp  test  toolchain-aarch64.cmake
build-release/: .ninja_deps  .ninja_log
build64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
buildarm/: .ninja_deps  .ninja_log  CMakeCache.txt  NAKANISHI_IOT_SYSTEM_PROTTYPE  build.ninja  cmake_install.cmake
config/: config.json  requestdata.json
include/: AppConfig.hpp  AppController.hpp  CSVIO.hpp  Config.hpp  CsvPreProcessor.hpp  CsvReader.hpp  DataLump.hpp  DataLumpBase.hpp  DataLumpTest.hpp  DataPreprocessor.hpp  Logger.hpp  MCprotocolConfig.hpp  MCprotocolData.hpp  MCprotocolManager.hpp  PLCConnectionClient.hpp  PLCRequestData.hpp  PLCRequestResponseData.hpp  PLCRequestScheduler.hpp  PLCRequestWorker.hpp  PLCResponseData.hpp  PLCTransactionData.hpp  PtrVector.hpp  ResourcesManager.hpp  ServerConnectionClient.hpp  ServerRequestWorker.hpp  globals.hpp
ini/: config.ini
logs/: basic-log.txt
request/: datalist.csv  testdataDemo.csv  testdataNew.csv
src/: AppConfig.cpp  AppController.cpp  CSVIO.cpp  CSVIOBase.cpp  Config.cpp  CsvReader  (+18 more)
(+10 files in other folders)
